# franca2

./: .gitignore  README.MD  franca2.10x
docs/: core_functions.txt  goals_and_solutions.txt  ideas.txt  implementation_notes.txt  index_of_example.txt  inlining.txt  meta.txt  multiple_emits.txt  problems_to_solve.txt  someday.txt  stack_vs_regular_scope.txt  subgoals.txt  todo.txt  universal_variables.txt
docs/lang_design/: attributes.txt  expansions_in_analysis.txt  index_of_example.txt  inlining.txt  iterative_analysis.txt  meta.txt  multiple_emits.txt  other_languages.txt  pass_by_ref.txt  polymorphism.txt  references.txt  return_depth.txt  scopes_at_core.txt  short_circuiting.txt  universal_variables.txt  vararg.txt
src/: CMakeLists.txt  README.md  asts.h  asts_analysis.h  asts_codegen.h  asts_codegen_old.h  asts_compilation.h  asts_display.h  asts_parsing.h  asts_printing.h  asts_storage.h  build-web.bat  code_view_generation.h  code_views.h  color_palette.h  color_scheme.h  compute_asts.h  compute_compilation.h  compute_definitions.h  compute_display.h  compute_execution.h  compute_interpretation.h  compute_parsing.h  compute_printing.h  compute_storage.h  franca2.sln  line_view_gen.h  line_view_generation.h  main.cpp  main.wgsl  python_host.bat  shell.html  visual_asts.h  visual_display.h  visual_parser.h  visual_view_gen.h
src/assets/: fib.fr  hello_world.fr  macro_test.fr  prelude.fr  prelude_old.fr  primitives_test.fr  ref_test.fr  ret_depth.fr  scope_vars_test.fr  test0.fr  test_program.fr  test_program.frv
src/franca2_app/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  Package.appxmanifest  app.manifest  franca2_app.csproj
src/franca2_app/Properties/: launchSettings.json
src/utility/: arena_arrays.h  arenas.h  arr_bucks.h  arr_dyns.h  arrayds.h  arrays.h  emsc_ex.h  files.h  hex_ex.h  int_maths.h  iterators.h  maths.h  maths2.h  maths3.h  maths4.h  matrices.h  mem_ex.h  parsing.h  primitives.h  results.h  stbi_ex.h  string_tables.h  strings.h  swap_queue.h  swap_queuess.h  syntax.h  transforms.h  trigs.h  wasm_emit.h  wgpu_ex.h  wgpu_png.h  wgsl_ex.h
